syntax = "proto3";

option go_package = "github.com/LAtoken/lachain-communication-hub/grpc/protobuf";

package protobuf;

service CommunicationHub {
    rpc GetKey (GetHubIdRequest) returns (GetHubIdReply) {}
    rpc Init (InitRequest) returns (InitReply) {}
    rpc Communicate (stream InboundMessage) returns (stream OutboundMessage) {}
}

message InboundMessage {
    bytes publicKey = 1;
    bytes data = 2;
}

message OutboundMessage {
    bytes data = 1;
}

message InitRequest {
    bytes signature = 1;
}

message InitReply {
    bool result = 1;
}

message GetHubIdRequest {
}

message GetHubIdReply {
    bytes id = 1;
}
